Moirai.Parser/MoiraiParser.g4
parser grammar MoiraiParser;
@header {
    namespace Moirai.Parser;
}
options {

  tokenVocab=moirai_lexer;

}
r: COMMENT* (comment|action|event|prop_definition|enum_definition|type_definition|LINE_BREAK)+ EOF;
comment: COMMENT LINE_BREAK;
filter:AT (occurence=NUMBER ID years=NUMBER)? ID LINE_BREAK?;
action: filter? RULE  ID categories SCOPE_OPEN LINE_BREAK (effect|comment)+ SCOPE_CLOSE LINE_BREAK*;
categories: ID* ;
event: EVENT ID categories SCOPE_OPEN LINE_BREAK when+ (effect|comment)+ SCOPE_CLOSE LINE_BREAK*;
when: WHEN expr (COMMA expr)* SPACE* LINE_BREAK+;
effect: (set | var | expr) SPACE* (comment|LINE_BREAK)* LINE_BREAK+;
if: IF cond=expr then=scope (ELSE LINE_BREAK*  else=scope)? ;
match: (MATCH|MATCH_WEIGHT) expr (COMMA expr)* SCOPE_OPEN LINE_BREAK* match_case+ SCOPE_CLOSE  LINE_BREAK*;
match_case: value (COMMA value)* ARROW (effect|scope) ;
set: SET  path EQ expr;
var: VAR  VAR_ID COLON expr;
//call_assign : ID (VAR_ID COLON)?  ((expr (COMMA expr)* )) scope?;
call : ID (VAR_ID COLON)? ((expr (COMMA expr)* )) scope?;
scope: SCOPE_OPEN LINE_BREAK* (effect|comment)* SCOPE_CLOSE LINE_BREAK*;
value: call | string | enum_value | TYPE_ID | path | bool | number | NULL;
expr
    : if
    | match
    | left=expr op=(EQ | NEQ | GE | LE | GT | LT) right=expr
    | left=expr op=(MUL | DIV) right=expr
    | left=expr op=(ADD | SUB) right=expr
    | (PAREN_OPEN paren_expr=expr PAREN_CLOSE)
    | value
    ;

type_definition: ENTITY TYPE_ID SCOPE_OPEN LINE_BREAK* SCOPE_CLOSE LINE_BREAK+ ;

prop_definition: PROP ID COLON (ID|TYPE_ID) LINE_BREAK+ ;

enum_definition: ENUM TYPE_ID SCOPE_OPEN LINE_BREAK* TYPE_ID (COMMA LINE_BREAK* TYPE_ID)* COMMA? LINE_BREAK* SCOPE_CLOSE LINE_BREAK+ ;

string: STRING ;

bool: TRUE | FALSE;
path : (SINGLETON_ID | VAR_ID) (DOT ID)* | ID;
enum_value: TYPE_ID DOT TYPE_ID ;
number: NUMBER;
