Moirai.Parser/gen/MoiraiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/theor/Moirai/Moirai.Parser/MoiraiParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


    namespace Moirai.Parser;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MoiraiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		STRING=1, NULL=2, SPACE=3, LINE_BREAK=4, COMMENT=5, COLON_EQ=6, COLON=7, 
		SCOPE_OPEN=8, SCOPE_CLOSE=9, PAREN_OPEN=10, PAREN_CLOSE=11, EVENT=12, 
		ENTITY=13, TRIGGER=14, PROP=15, ENUM=16, WHEN=17, WHEN_CREATED=18, SET=19, 
		VAR=20, MATCH=21, MATCH_WEIGHT=22, COMMA=23, ARROW=24, IF=25, ELSE=26, 
		TRUE=27, FALSE=28, DOT=29, NEQ=30, EQ=31, ADD=32, SUB=33, MUL=34, DIV=35, 
		GE=36, LE=37, GT=38, LT=39, AND=40, OR=41, SINGLETON_ID=42, VAR_ID=43, 
		PROP_ID=44, AT=45, TYPE_ID=46, ID=47, NUMBER_FLOAT=48, NUMBER=49;
	public const int
		RULE_r = 0, RULE_comment = 1, RULE_filter = 2, RULE_event = 3, RULE_categories = 4, 
		RULE_trigger = 5, RULE_when = 6, RULE_when_created = 7, RULE_effect = 8, 
		RULE_if = 9, RULE_match = 10, RULE_match_case = 11, RULE_set = 12, RULE_var = 13, 
		RULE_call = 14, RULE_scope = 15, RULE_value = 16, RULE_expr = 17, RULE_type_definition = 18, 
		RULE_prop_definition = 19, RULE_enum_definition = 20, RULE_string = 21, 
		RULE_bool = 22, RULE_path = 23, RULE_enum_value = 24, RULE_number = 25;
	public static readonly string[] ruleNames = {
		"r", "comment", "filter", "event", "categories", "trigger", "when", "when_created", 
		"effect", "if", "match", "match_case", "set", "var", "call", "scope", 
		"value", "expr", "type_definition", "prop_definition", "enum_definition", 
		"string", "bool", "path", "enum_value", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'null'", null, null, null, "':='", "':'", "'{'", "'}'", "'('", 
		"')'", "'event'", "'entity'", "'trigger'", "'prop'", "'enum'", "'when'", 
		"'when_created'", "'set'", "'var'", "'match'", "'random_weighted'", "','", 
		"'=>'", "'if'", "'else'", "'true'", "'false'", "'.'", "'!='", "'='", "'+'", 
		"'-'", "'*'", "'/'", "'>='", "'<='", "'>'", "'<'", "'and'", "'or'", null, 
		null, null, "'@'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "STRING", "NULL", "SPACE", "LINE_BREAK", "COMMENT", "COLON_EQ", 
		"COLON", "SCOPE_OPEN", "SCOPE_CLOSE", "PAREN_OPEN", "PAREN_CLOSE", "EVENT", 
		"ENTITY", "TRIGGER", "PROP", "ENUM", "WHEN", "WHEN_CREATED", "SET", "VAR", 
		"MATCH", "MATCH_WEIGHT", "COMMA", "ARROW", "IF", "ELSE", "TRUE", "FALSE", 
		"DOT", "NEQ", "EQ", "ADD", "SUB", "MUL", "DIV", "GE", "LE", "GT", "LT", 
		"AND", "OR", "SINGLETON_ID", "VAR_ID", "PROP_ID", "AT", "TYPE_ID", "ID", 
		"NUMBER_FLOAT", "NUMBER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MoiraiParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MoiraiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MoiraiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MoiraiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MoiraiParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMENT() { return GetTokens(MoiraiParser.COMMENT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT(int i) {
			return GetToken(MoiraiParser.COMMENT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventContext[] @event() {
			return GetRuleContexts<EventContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventContext @event(int i) {
			return GetRuleContext<EventContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TriggerContext[] trigger() {
			return GetRuleContexts<TriggerContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TriggerContext trigger(int i) {
			return GetRuleContext<TriggerContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Prop_definitionContext[] prop_definition() {
			return GetRuleContexts<Prop_definitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Prop_definitionContext prop_definition(int i) {
			return GetRuleContext<Prop_definitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_definitionContext[] enum_definition() {
			return GetRuleContexts<Enum_definitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_definitionContext enum_definition(int i) {
			return GetRuleContext<Enum_definitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_definitionContext[] type_definition() {
			return GetRuleContexts<Type_definitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_definitionContext type_definition(int i) {
			return GetRuleContext<Type_definitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_BREAK() { return GetTokens(MoiraiParser.LINE_BREAK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_BREAK(int i) {
			return GetToken(MoiraiParser.LINE_BREAK, i);
		}
		public RContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_r; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterR(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitR(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitR(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RContext r() {
		RContext _localctx = new RContext(Context, State);
		EnterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 52;
					Match(COMMENT);
					}
					} 
				}
				State = 57;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 65;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case COMMENT:
					{
					State = 58;
					comment();
					}
					break;
				case EVENT:
				case AT:
					{
					State = 59;
					@event();
					}
					break;
				case TRIGGER:
					{
					State = 60;
					trigger();
					}
					break;
				case PROP:
					{
					State = 61;
					prop_definition();
					}
					break;
				case ENUM:
					{
					State = 62;
					enum_definition();
					}
					break;
				case ENTITY:
					{
					State = 63;
					type_definition();
					}
					break;
				case LINE_BREAK:
					{
					State = 64;
					Match(LINE_BREAK);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372215856L) != 0) );
			State = 69;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(MoiraiParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 2, RULE_comment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilterContext : ParserRuleContext {
		public IToken occurence;
		public IToken years;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(MoiraiParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(MoiraiParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(MoiraiParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_BREAK() { return GetToken(MoiraiParser.LINE_BREAK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NUMBER() { return GetTokens(MoiraiParser.NUMBER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER(int i) {
			return GetToken(MoiraiParser.NUMBER, i);
		}
		public FilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterFilter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitFilter(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FilterContext filter() {
		FilterContext _localctx = new FilterContext(Context, State);
		EnterRule(_localctx, 4, RULE_filter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(AT);
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NUMBER) {
				{
				State = 74;
				_localctx.occurence = Match(NUMBER);
				State = 75;
				Match(ID);
				State = 76;
				_localctx.years = Match(NUMBER);
				}
			}

			State = 79;
			Match(ID);
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LINE_BREAK) {
				{
				State = 80;
				Match(LINE_BREAK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EVENT() { return GetToken(MoiraiParser.EVENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(MoiraiParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CategoriesContext categories() {
			return GetRuleContext<CategoriesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCOPE_OPEN() { return GetToken(MoiraiParser.SCOPE_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_BREAK() { return GetTokens(MoiraiParser.LINE_BREAK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_BREAK(int i) {
			return GetToken(MoiraiParser.LINE_BREAK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCOPE_CLOSE() { return GetToken(MoiraiParser.SCOPE_CLOSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FilterContext filter() {
			return GetRuleContext<FilterContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext[] effect() {
			return GetRuleContexts<EffectContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext effect(int i) {
			return GetRuleContext<EffectContext>(i);
		}
		public EventContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_event; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterEvent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitEvent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEvent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventContext @event() {
		EventContext _localctx = new EventContext(Context, State);
		EnterRule(_localctx, 6, RULE_event);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AT) {
				{
				State = 83;
				filter();
				}
			}

			State = 86;
			Match(EVENT);
			State = 87;
			Match(ID);
			State = 88;
			categories();
			State = 89;
			Match(SCOPE_OPEN);
			State = 90;
			Match(LINE_BREAK);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 98;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case STRING:
				case NULL:
				case PAREN_OPEN:
				case SET:
				case VAR:
				case MATCH:
				case MATCH_WEIGHT:
				case IF:
				case TRUE:
				case FALSE:
				case SINGLETON_ID:
				case VAR_ID:
				case TYPE_ID:
				case ID:
				case NUMBER_FLOAT:
				case NUMBER:
					{
					{
					State = 91;
					effect();
					State = 93;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 92;
						Match(LINE_BREAK);
						}
						}
						State = 95;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==LINE_BREAK );
					}
					}
					break;
				case COMMENT:
					{
					State = 97;
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1068725746271270L) != 0) );
			State = 102;
			Match(SCOPE_CLOSE);
			State = 106;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 103;
					Match(LINE_BREAK);
					}
					} 
				}
				State = 108;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CategoriesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(MoiraiParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(MoiraiParser.ID, i);
		}
		public CategoriesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_categories; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterCategories(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitCategories(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCategories(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CategoriesContext categories() {
		CategoriesContext _localctx = new CategoriesContext(Context, State);
		EnterRule(_localctx, 8, RULE_categories);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 109;
				Match(ID);
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TriggerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRIGGER() { return GetToken(MoiraiParser.TRIGGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(MoiraiParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CategoriesContext categories() {
			return GetRuleContext<CategoriesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCOPE_OPEN() { return GetToken(MoiraiParser.SCOPE_OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_BREAK() { return GetTokens(MoiraiParser.LINE_BREAK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_BREAK(int i) {
			return GetToken(MoiraiParser.LINE_BREAK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCOPE_CLOSE() { return GetToken(MoiraiParser.SCOPE_CLOSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WhenContext when() {
			return GetRuleContext<WhenContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public When_createdContext when_created() {
			return GetRuleContext<When_createdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext[] effect() {
			return GetRuleContexts<EffectContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectContext effect(int i) {
			return GetRuleContext<EffectContext>(i);
		}
		public TriggerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trigger; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.EnterTrigger(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMoiraiParserListener typedListener = listener as IMoiraiParserListener;
			if (typedListener != null) typedListener.ExitTrigger(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMoiraiParserVisitor<TResult> typedVisitor = visitor as IMoiraiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrigger(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TriggerContext trigger() {
		TriggerContext _localctx = new TriggerContext(Context, State);
		EnterRule(_localctx, 10, RULE_trigger);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(TRIGGER);
			State = 116;
			Match(ID);
			State = 117;
			categories();
			State = 118;
			Match(SCOPE_OPEN);
			State = 119;
			Match(LINE_BREAK);
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case WHEN:
				{
				State = 120;
				when();
				}
				break;
			case WHEN_CREATED:
				{
				State = 121;
				when_created();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 136;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case STRING:
				case NULL:
				case PAREN_OPEN:
				case SET:
				case VAR:
				case MATCH:
				case MATCH_WEIGHT:
				case IF:
				case TRUE:
				case FALSE:
				case SINGLETON_ID:
				case VAR_ID:
				case TYPE_ID:
				case ID:
				case NUMBER_FLOAT:
				case NUMBER:
					{
					{
					State = 124;
					effect();
					State = 126;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 125;
						Match(LINE_BREAK);
						}
						}
						State = 128;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==LINE_BREAK );
					}
					}
					break;
				case COMMENT:
					{
					State = 130;
					comment();
					State = 132;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 131;
						Match(LINE_BREAK);
						}
						}
						State = 134;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==LINE_BREAK );
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1068725746271270L) != 0) );
			State = 140;
			Match(SCOPE_CLOSE);
			State = 144;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,16,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 141;
					Match(LINE_BREAK);
					}
					} 
				}
				State = 146;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,16,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
